creating ChangeLog
2003-03-04 David Malcolm on behalf of Doug Daniels

	* global.h, popup.c, tree.c, xmldata.c

	Beginning of DTD validation
	
2003-01-27 David Malcolm

	*  cong-document.c, cong-primary-window.c, cong-span-text-editor.c, cursor.c, global.h, popup.c, position.c, select.c, xmledit.c, xmlview.c

	Added USE_CONG_EDITOR_WIDGET define
	
2002-12-19 David Malcolm

	* cong-dummy-element-editor.c, cong-editor-widget-impl.h, cong-editor-widget.c, cong-element-editor.c, cong-section-head-editor.c, cong-span-text-editor.c, cursor.c, global.h, xmledit.c

	Typing support within CongEditorWidget
	
2002-12-12 David Malcolm

	* cong-dummy-element-editor.c, cong-editor-widget-impl.h, cong-editor-widget.c, cong-element-editor.c, cong-section-head-editor.c, cong-span-text-editor.c

	Click/drag support for span text editor

	* cong-span-text-editor.c

	Fixes to whitespace stripping/CongTextSpan code
	
2002-12-12 Jerritt Collord

	* dispspec.c: changed widget_usize for element chooser

2002-12-11 David Malcolm

	* cong-dialog.c, cong-dialog.h

	Layout fixes, new dialog to confirm reverts

	* cong-document.c, cong-dummy-element-editor.c, cong-editor-widget-impl.h, cong-editor-widget.c, cong-element-editor.c, cong-primary-window.c, cong-section-head-editor.c, cong-span-text-editor.c, cong-test-view.c, cong-tree-view.c, global.h, main.c, popup.c, xmledit.c, xmlview.c

	Overhaul of document change notification system, mapping from document nodes to element editors, confirmation for file->revert, popup/context menu for CongEditorWidget

2002-12-11 Geert Stappers <Geert.Stappers@xs4all.nl>

	* Makefile.am: added cong-plugin.h to make it into the dist
	Discovered that the toplevel `make distcheck` is usefull tool

2002-11-29 Dmitry G. Mastrukov

	* cong-primary-window.c, global.h, main.c
	
	I18n: fixes, about box, menus.
	
2002-11-28 Geert Stappers

	* cong-primary-window.c
	Version back in the about box.
	Added credits for documenters.