@@ -7,6 +7,7 @@
 #include "global.h"
 #include "cong-document.h"
 #include "cong-dispspec.h"
+#include "cong-dialog.h"
 
 void tree_coarse_update_of_view(CongTreeView *cong_tree_view)
 {
@@ -105,6 +106,12 @@ gint tree_properties(GtkWidget *widget, CongNodePtr tag)
 	CongTreeView *cong_tree_view;
 	CongDocument *doc;
 	CongDispspec *ds;
+	GtkWidget *dialog, *vbox;
+	GtkWidget *notebook;
+	CongDialogContent *dialog_content;
+	CongDialogCategory *category_dtdschema;
+	CongDialogCategory *category_custom;
+	xmlElementPtr xml_element;
 
 	cong_tree_view = g_object_get_data(G_OBJECT(widget),
 					   "popup_data_item");
@@ -112,7 +119,106 @@ gint tree_properties(GtkWidget *widget, CongNodePtr tag)
 	doc = CONG_VIEW(cong_tree_view)->doc;
 	ds = cong_document_get_dispspec(doc);
 
-	/* FIXME: unwriten */
+	/* FIXME: Test implementation: */
+	dialog = gtk_dialog_new_with_buttons("Placeholder Properties Dialog",
+					     NULL,
+					     GTK_DIALOG_MODAL,
+					     GTK_STOCK_OK, GTK_RESPONSE_OK,
+					     NULL);
+					
+	gtk_container_set_border_width(GTK_CONTAINER(dialog), 6);
+
+	vbox = GTK_DIALOG(dialog)->vbox;
+
+	notebook = gtk_notebook_new();
+	gtk_box_pack_start(GTK_BOX(vbox), notebook, FALSE, FALSE, 0);	
+
+	dialog_content = cong_dialog_content_new(TRUE);
+	gtk_notebook_append_page(GTK_NOTEBOOK(notebook),
+				 cong_dialog_content_get_widget(dialog_content),
+				 gtk_label_new("Advanced")
+				 );
+
+	xml_element = xml_get_dtd_element(doc, tag);
+
+	if (xml_element) {
+		xmlAttributePtr attr;
+		category_dtdschema = cong_dialog_content_add_category(dialog_content, 
+								      "Properties from DTD/schema");
+
+		for (attr=xml_element->attributes; attr; attr=attr->nexth) {
+			switch (attr->atype) {
+			default: g_assert_not_reached();
+			case XML_ATTRIBUTE_CDATA:
+				cong_dialog_category_add_field(category_dtdschema, attr->name, gtk_label_new("CDATA"));
+				break;
+				
+			case XML_ATTRIBUTE_ID:
+				cong_dialog_category_add_field(category_dtdschema, attr->name, gtk_label_new("ID"));
+				break;
+				
+			case XML_ATTRIBUTE_IDREF:
+				cong_dialog_category_add_field(category_dtdschema, attr->name, gtk_label_new("IDREF"));
+				break;
+				
+			case XML_ATTRIBUTE_IDREFS:
+				cong_dialog_category_add_field(category_dtdschema, attr->name, gtk_label_new("IDREFS"));
+				break;
+
+			case XML_ATTRIBUTE_ENTITY:
+				cong_dialog_category_add_field(category_dtdschema, attr->name, gtk_label_new("ENTITY"));
+				break;
+				
+			case XML_ATTRIBUTE_ENTITIES:
+				cong_dialog_category_add_field(category_dtdschema, attr->name, gtk_label_new("ENTITIES"));
+				break;
+				
+			case XML_ATTRIBUTE_NMTOKEN:
+				cong_dialog_category_add_field(category_dtdschema, attr->name, gtk_label_new("NMTOKEN"));
+				break;
+				
+			case XML_ATTRIBUTE_NMTOKENS:
+				cong_dialog_category_add_field(category_dtdschema, attr->name, gtk_label_new("NMTOKENS"));
+				break;
+				
+			case XML_ATTRIBUTE_ENUMERATION:
+				{
+					GtkWidget *option_menu = gtk_option_menu_new();
+					GtkWidget *menu = gtk_menu_new();
+					xmlEnumerationPtr enum_ptr;
+
+					for (enum_ptr=attr->tree; enum_ptr; enum_ptr=enum_ptr->next) {
+						gtk_menu_shell_append(GTK_MENU_SHELL(menu), 
+								      gtk_menu_item_new_with_label(enum_ptr->name));
+					}
+
+					gtk_option_menu_set_menu(GTK_OPTION_MENU(option_menu), 
+								 menu);
+
+					cong_dialog_category_add_field(category_dtdschema, 
+								       attr->name, 
+								       option_menu);
+				}
+				break;
+
+			case XML_ATTRIBUTE_NOTATION:
+				cong_dialog_category_add_field(category_dtdschema, attr->name, gtk_label_new("NOTATION"));
+				break;
+			}
+			
+
+
+		}
+	}
+
+	category_custom = cong_dialog_content_add_category(dialog_content, 
+							   "Custom Properties");
+
+
+	gtk_widget_show_all (dialog);
+
+	gtk_dialog_run(GTK_DIALOG(dialog));
+	gtk_widget_destroy(dialog);
 
 	return TRUE;
 }
